--- a/src/components/NavBar/NavBarStyles.scss
+++ b/src/components/NavBar/NavBarStyles.scss
@@ -1,6 +1,7 @@
 .header-container {
   position: fixed;
   width: 100%;
+  z-index: 11;
 }
 .header {
   width: 100%;
@@ -22,22 +23,21 @@
     justify-content: space-evenly;
     text-decoration: none;
     &__item::after {
-        display: block;
-        width: 0;
+      display: block;
+      width: 0;
       min-height: 1px;
       height: 1px;
       background-color: #cdcbc9;
-      content: '';
+      content: "";
       position: relative;
       margin-top: 5px;
       opacity: 80%;
-      transition: all ease-in-out .2s;
+      transition: all ease-in-out 0.2s;
     }
     &__item:hover {
       opacity: 80%;
-      &::after{
-      width: 100%;
-
+      &::after {
+        width: 100%;
       }
     }
 
@@ -63,8 +63,12 @@
 }
 
 @media screen and (max-width: 1240px) {
+  .header {
+    padding: 1rem 2rem;
+  }
   .hamburger {
     display: block;
+    height: 20px;
   }
   .nav-menu {
     position: absolute;
@@ -82,12 +86,28 @@
 
     &.active {
       left: 0;
+      margin: 0;
     }
     li {
       padding: 1rem 0;
     }
     a {
       font-size: 2rem;
+    }
+  }
+}
+
+@media screen and (max-width: 356px) {
+  .header {
+    align-items: center;
+    picture {
+      width: 220px;
+      display: block;
+      img {
+        padding: 0;
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 }
